<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/menu_save_button_title"
        android:showAsAction="ifRoom">
        
    </item>
    
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/menu_delete_button_title"
        android:showAsAction="ifRoom">
        
    </item>

	<item
        android:id="@+id/color"
        android:icon="@drawable/ic_action_color"
        android:title="@string/menu_color_button_title"
        android:showAsAction="ifRoom" >
        <menu >
        	<group android:id="@+id/color_group" android:checkableBehavior="single">
        		<item android:id="@+id/blue" android:title="@string/menu_blue_button_title" />
	            <item android:id="@+id/white" android:title="@string/menu_white_button_title" />
       		    <item android:id="@+id/yellow" android:title="@string/menu_yellow_button_title" />
        		<item android:id="@+id/pink" android:title="@string/menu_pink_button_title" />
        		<item android:id="@+id/green" android:title="@string/menu_green_button_title" />
      </group>   
        </menu>        
    </item>
    
</menu>
