<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/login"
        android:icon="@drawable/ic_action_login"
        android:title="@string/menu_account_button_title"
        android:showAsAction="ifRoom">
    </item>
    
    <item
        android:id="@+id/newnote"
        android:icon="@drawable/ic_action_new"
        android:title="@string/menu_new_button_title"
        android:showAsAction="ifRoom">
    </item>
    
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/menu_refreash_button_title"
        android:showAsAction="ifRoom">
    </item>
    
    <item
        android:id="@+id/search"
        android:title="@string/menu_search_button_title"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView">
    </item>
    
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/menu_about_button_title"
        android:showAsAction="ifRoom">
    </item>
    
</menu>
